--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -2,9 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tags</title>
+    <link th:href="@{/style.css}" rel="stylesheet">
 </head>
 <body>
-<h1> TAG VISES HER </h1>
+
+<header>
+    <h1> TAG VISES HER </h1>
+</header>
+
 </body>
 </html>
