--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -6,18 +6,20 @@
 </head>
 <body>
 <h1> All attractions</h1>
-<table>
-  <tr th:if="${attractions.isEmpty()}"> There are no attractions"</tr>
-  <tr th:if="${!attractions.isEmpty()}">
-    <th>Name</th>
-    <th>Description</th>
-  </tr>
-  <tr th:each="attraction: ${attractions}">
-    <td th:text="${attraction.name}">
-    <td th:text="${attraction.description}">
-    <td>
-      <a th:href="@{/{name}/tags(name=${attraction.name})}"><button>Tags</button></a>
-    </td>
-</table>
+<div class="tableBackground">
+  <table>
+    <tr th:if="${attractions.isEmpty()}"> There are no attractions"</tr>
+    <tr th:if="${!attractions.isEmpty()}">
+      <th>Name</th>
+      <th>Description</th>
+    </tr>
+    <tr th:each="attraction: ${attractions}">
+      <td th:text="${attraction.name}">
+      <td th:text="${attraction.description}">
+      <td>
+        <a th:href="@{/{name}/tags(name=${attraction.name})}"><button>Tags</button></a>
+      </td>
+  </table>
+</div>
 </body>
 </html>
