--- a/src/main/resources/templates/addAttraction.html
+++ b/src/main/resources/templates/addAttraction.html
@@ -2,8 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add attraction</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 </body>
