--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Show attractions</title>
+  <link rel="stylesheet" th:href="@{/attractions.css}">
 </head>
 <body>
 <h1> All attractions</h1>
