--- a/src/main/resources/templates/findAttractionByName.html
+++ b/src/main/resources/templates/findAttractionByName.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Find attraction by name</title>
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
