--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Show attractions</title>
+  <link rel="stylesheet" th:href="@{/attractions.css}">
 </head>
 <body>
 <h1> All attractions</h1>
@@ -17,9 +18,11 @@
       <td th:text="${attraction.name}">
       <td th:text="${attraction.description}">
       <td>
-        <a th:href="@{/{name}/tags(name=${attraction.name})}"><button>Tags</button></a>
+        <a th:href="@{{name}/tags(name=${attraction.name})}"><button>Tags</button></a>
       </td>
   </table>
 </div>
+<br>
+<a href="/index.html"><button>Tilbage til forsiden</button></a>
 </body>
 </html>
