--- a/src/main/resources/templates/findAttractionByName.html
+++ b/src/main/resources/templates/findAttractionByName.html
@@ -2,9 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Find attraction by name</title>
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
-<body>
+<body >
+<h1>Attraction</h1>
+<p th:if="${attraction.name != null}" th:text="${attraction.name}">Name </p>
+<p th:if="${attraction.name != null}" th:text="${attraction.description}">Description </p>
+<p th:if="${attraction.name == null }"> This is not an attraction </p>
 
+
+<table>
+
+
+</table>
 </body>
 </html>
