--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -11,7 +11,7 @@
 <div class="tableBackground">
   <table>
     <thead>
-    <tr th:if="${attractions.isEmpty()}"> There are no attractions"</tr>
+    <tr th:if="${attractions.isEmpty()}"> There are no attractions</tr>
     <tr th:if="${!attractions.isEmpty()}">
       <th>Name</th>
       <th>Description</th>
@@ -24,9 +24,11 @@
       <td>
         <a th:href="@{/attraction/{name}/tags(name=${attraction.name})}"><button>Tags</button></a>
         <a th:href="@{/attraction/{name}/edit(name=${attraction.name})}"> <button>Edit</button></a>
+
         <form th:action="@{/attraction/{name}/delete(name=${attraction.name})}" method="post" style="display:inline;"
               onsubmit="return confirm('Er du sikker på, at du vil slette denne attraktion?');">
           <button type="submit">Delete</button>
+
         </form>
       </td>
     </tr>
