Changes by anoepsundahl

--- a/src/main/resources/templates/addAttraction.html
+++ b/src/main/resources/templates/addAttraction.html
@@ -19,7 +19,7 @@
     <textarea id="description" th:field="*{description}" required></textarea>
     <br><br>
 
-    <label>Vælg tags:</label><br>
+   <!-- <label>Vælg tags:</label><br>
     <div th:each="t : ${Tags}">
         <input type="checkbox"
                th:value="${t}"
@@ -38,6 +38,7 @@
         </select>
     <br><br>
     <button type="submit" >Gem attraktion</button>
+-->
 </form>
 
 <br>
