--- a/src/main/resources/templates/findAttractionByName.html
+++ b/src/main/resources/templates/findAttractionByName.html
@@ -33,7 +33,7 @@
             <li th:each="t : ${attraction.tag}" th:text="${t}">TAG</li>
         </ul>
         <p th:if="${attraction.tag == null or #lists.isEmpty(attraction.tag)}">No tag</p>
-        <a href="/index.html"><button>Tilbage til forsiden</button></a>
+        <a href="/templates/index.html"><button>Tilbage til forsiden</button></a>
     </div>
 </div>
 <div th:if="${attraction == null}">
