--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -36,6 +36,6 @@
   </table>
 </div>
 <br>
-<a href="/index.html"><button>Tilbage til forsiden</button></a>
+<a href="/"><button>Tilbage til forsiden</button></a>
 </body>
 </html>
