--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -18,7 +18,7 @@
     <li th:each="tag : ${attraction.tag}" th:text="${tag}">Tag</li>
 </ul>
 
-<a href="/index.html"><button>Tilbage til forsiden</button></a>
+<a href="/templates/index.html"><button>Tilbage til forsiden</button></a>
 
 </body>
 </html>
