--- a/src/main/resources/templates/addAttraction.html
+++ b/src/main/resources/templates/addAttraction.html
@@ -43,7 +43,7 @@
 
 <br>
 <a href="/attraction/all">← Tilbage til oversigten</a>
-<a href="/templates/index.html"><button>Tilbage til forsiden</button></a>
+<a href="/"><button>Tilbage til forsiden</button></a>
 
 </body>
 </html>
