--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,25 +11,27 @@
     <h1 class="title"> <b>TOURISTGUIDE</b></h1>
 </header>
 
-<p class="pForside">Explore Denmark’s top attractions and hidden gems. <br>
+<p class="pForside">
+    Explore Denmark’s top attractions and hidden gems. <br>
     Whether you’re a family, couple, or nature lover, our guide helps you find the perfect experiences for your
-    journey. </p>
+    journey.
+</p>
 
 <div class="container">
 
     <br>
-
-    </div>
     <br>
+
     <div class="item3">
-        <p class="pForside"> When you need to find your way around the city, you can use Rejseplanen <br>
-            You will find the link to the website <a
-                    href="https://www.rejseplanen.dk/webapp/#!P|TP!histId|0!histKey|H195305">by clicking here</a>
+        <p class="pForside">
+            When you need to find your way around the city, you can use Rejseplanen <br>
+            You will find the link to the website
+            <a href="https://www.rejseplanen.dk/webapp/#!P|TP!histId|0!histKey|H195305">by clicking here</a>
         </p>
     </div>
 
     <div class="item4">
-        <a href="/attraction/all">See all atractions</a>
+        <a href="/attraction/all">See all attractions</a>
         <nav>
             <ul class="myUL">
 
@@ -37,7 +39,6 @@
                 <li><a href="/attraction/FCKstadion"> Here you can read about Parken </a></li>
                 <li><a href="/attraction/Bibliotek"> Here you can read about Copenhagen library </a></li>
                 <li><a href="/attraction/EK"> Here you can read about EK </a></li>
-
                 <br>
                 <li><a href="attraction/add"> Here you can add an attraction</a></li>
 
@@ -45,11 +46,10 @@
         </nav>
     </div>
 
-<br>
-<br>
-<br>
-<br>
+<br><br><br><br>
+
 </div>
+
 <footer> <!-- til kontaktinfo -->
     <p><b> Kontakt os </b></p>
     <p> E-mail: gruppe2@stud.ek.dk </p>
