--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -15,10 +15,10 @@
 
 <h2>Tags</h2>
 <ul>
-    <li th:each="tag : ${attraction.tag}" th:text="${tag}">Tag</li>
+    <li th:each="tag : ${attraction.tags}" th:text="${tag}">Tag</li>
 </ul>
 
-<a href="/templates/index.html"><button>Tilbage til forsiden</button></a>
+<a href="/"><button>Tilbage til forsiden</button></a>
 
 </body>
 </html>
