--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -11,7 +11,9 @@
 <div class="tableBackground">
   <table>
     <thead>
-    <tr th:if="${attractions.isEmpty()}"> There are no attractions</tr>
+    <tr th:if="${attractions.isEmpty()}">
+      <td colspand="3">There are no attractions</td>
+    </tr>
     <tr th:if="${!attractions.isEmpty()}">
       <th>Name</th>
       <th>Description</th>
