--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
                 <li><a href="/attraction/Bibliotek"> Here you can read about Copenhagen library </a></li>
                 <li><a href="/attraction/EK"> Here you can read about EK </a></li>
                 <br>
-                <li><a href="attraction/add"> Here you can add an attraction</a></li>
+                <li><a href="/attraction/add"> Here you can add an attraction</a></li>
 
             </ul>
         </nav>
