Første Final Commit

--- a/src/main/resources/templates/addAttraction.html
+++ b/src/main/resources/templates/addAttraction.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Show attractions</title>
+    <link rel="stylesheet" th:href="@{/attractions.css}">
+</head>
+<body>
 <form th:action="@{/attraction/save}" method="post" th:object="${attraction}">
     <label>Name:</label>
     <input type="text" th:field="*{name}" required><br>
@@ -22,3 +30,5 @@
 
     <button type="submit">Save</button>
 </form>
+</body>
+</html>
